2009-03-24 Braden McDaniel  <braden@endoframe.com>

	Moved Mozilla plug-in source to src/mozilla-plugin.

	* Makefile (SUBDIRS): Removed mozilla-plugin.
	* configure.ac: Emit src/mozilla-plugin/Makefile.
	* mozilla-plugin/Makefile.am: Removed.
	* mozilla-plugin/src/Makefile.am: Removed.
	* mozilla-plugin/src/openvrml.cpp: Removed.
	* src/Makefile.am (SUBDIRS): Added mozilla-plugin.
	* src/mozilla-plugin/Makefile.am: Moved from
	mozilla-plugin/src/Makefile.am.
	* src/mozilla-plugin/openvrml.cpp: Moved from
	mozilla-plugin/src/openvrml.cpp.

2009-03-24 Braden McDaniel  <braden@endoframe.com>

	Moved configuration for the Mozilla plug-in into the top-level
	configure.ac.

	* configure.ac: Added checks for Mozilla plug-in dependencies.
	* mozilla-plugin/Makefile.am (ACLOCAL_AMFLAGS): Removed.
	* mozilla-plugin/configure.ac: Removed.
	* mozilla-plugin/src/Makefile.am
	(AM_CPPFLAGS): Define MOZ_X11.
	(browser-host-server-glue.h): Adjusted path for browser-host.xml.
	(browser-factory-client-glue.h): Adjusted path for
	browser-factory.xml.
	(browser-client-glue.h): Adjusted path for browser.xml.
	* mozilla-plugin/src/openvrml.cpp: Include <config.h>.

2009-03-23 Braden McDaniel  <braden@endoframe.com>

	Make use of pkg-config's Requires.private and Libs.private.

	* openvrml.pc.in
	* openvrml-gl.pc.in

2009-03-20 Braden McDaniel  <braden@endoframe.com>

	Don't need OPENVRML_PKG_REQUIRES anymore.

	* configure.ac: Removed AC_SUBST for OPENVRML_PKG_REQUIRES.
	* openvrml.pc.in: Removed Requires; we don't depend on any other
	pkg-config-aware libraries.

2009-03-20 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Now that font rendering is isolated to a dlopen'd
	module, we don't need to add fontconfig and freetype2 to
	OPENVRML_PKG_REQUIRES.

2009-03-20 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Now that the SpiderMonkey dependency is isolated
	to a dlopen'd module, we don't need to add mozilla-js to
	OPENVRML_PKG_REQUIRES.
