@@ -16,7 +16,6 @@ AC_CONFIG_FILES([Makefile]
                 [src/script/java/vrml/Makefile]
                 [src/script/java/vrml/field/Makefile]
                 [src/script/java/vrml/node/Makefile]
-                [src/mozilla-plugin/Makefile]
                 [data/Makefile]
                 [examples/Makefile]
                 [tests/Makefile]
